# actinia_modules_nve

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  g.remove.path.html  g.transfer.html  g.unzip.html  i.asf.download.html  i.buildvrt.gdal.html  i.earthaccess.download.html  i.pytorch.html  i.pytorch.predict.html  i.satskred.html  i.sentinel.aggregate.metadata.html  i.sentinel1.gdargeocode.html  i.sentinel1.pyrosargeocode.html  i.sentinel2.import.html  index.md  pyproject.toml  r.avaframe.com1dfa.html  r.avaframe.com1dfa_v2.html  r.timeseries.locations.html  t.avalanche.stats.html  t.import.hrsi.html  t.pytorch.predict.html  t.rast.aggregate.condition.html  t.rast.aggregate.patch.html  t.rast.copytree.html  t.rast.exporttree.html  t.rast.import.gdalvrt.html  t.rast.patch.group.html  t.rast.reclass.html  t.rast.stats.html  t.register.local.html  t.sentinel3.import.html  test_keyvalue_result.txt
.github/workflows/: additional_checks.yml  apt.txt  black.yml  ci.yml  codeql-analysis.yml  extra_requirements.txt  flake8.yml  gh_pages.yml  python-code-quality.yml  python_requirements.txt  requirements.txt  super-linter.yml  test.sh
src/: .gunittest.cfg
src/general/g.remove.path/: Makefile  g.remove.path.html  g.remove.path.py
src/general/g.remove.path/testsuite/: test_g_remove_path.py
src/general/g.transfer/: Makefile  g.transfer.html  g.transfer.py
src/general/g.transfer/testsuite/: test_g_transfer.py
src/general/g.unzip/: Makefile  g.unzip.html  g.unzip.py
src/general/g.unzip/testsuite/: test_g_unzip.py
src/imagery/i.asf.download/: Makefile  i.asf.download.html  i.asf.download.py
src/imagery/i.asf.download/testsuite/: roi.geojson  test_i_asf_download.py  test_keyvalue_result.txt  token.txt
src/imagery/i.asf.download/testsuite/data/: roi.geojson
src/imagery/i.buildvrt.gdal/: Makefile  i.buildvrt.gdal.html  i.buildvrt.gdal.py
src/imagery/i.earthaccess.download/: Makefile  i.earthaccess.download.html  i.earthaccess.download.py
src/imagery/i.pytorch/: Makefile  i.pytorch.html
src/imagery/i.pytorch/i.pytorch.predict/: Makefile  i.pytorch.predict.html  i.pytorch.predict.py
src/imagery/i.pytorch/i.pytorch.predict/testsuite/: test_i_pytorch_predict.py
src/imagery/i.pytorch/pytorchlib/: Makefile  dependency.py  utils.py
src/imagery/i.satskred/: Makefile  i.satskred.html  i.satskred.py
src/imagery/i.satskred/testsuite/: test_i_satskred.py
src/imagery/i.satskred/testsuite/data/: roi.geojson
src/imagery/i.sentinel.aggregate.metadata/: Makefile  i.sentinel.aggregate.metadata.html  i.sentinel.aggregate.metadata.py
src/imagery/i.sentinel1.gdargeocode/: Makefile  i.sentinel1.gdargeocode.html  i.sentinel1.gdargeocode.py
src/imagery/i.sentinel1.import/: Makefile  i.sentinel1.import.html  i.sentinel1.import.py
src/imagery/i.sentinel1.pyrosargeocode/: Makefile  i.sentinel1.pyrosargeocode.html  i.sentinel1.pyrosargeocode.py
src/imagery/i.sentinel1.pyrosargeocode/testsuite/: test_i_sentinel1_pyrosargeocode.py
src/imagery/i.sentinel2.import/: Makefile  i.sentinel2.import.html  i.sentinel2.import.py
src/raster/r.avaframe.com1dfa/: Makefile  r.avaframe.com1dfa.html  r.avaframe.com1dfa.py
src/raster/r.avaframe.com1dfa/testsuite/: test_r_avaframe_com1dfa.py
src/raster/r.avaframe.com1dfa_v2/: Makefile  r.avaframe.com1dfa_v2.html  r.avaframe.com1dfa_v2.py
src/raster/r.avaframe.com1dfa_v2/testsuite/: test_keyvalue_result.txt  test_r_avaframe_com1dfa_v2.py
src/raster/r.avaframe.com1dfa_v2/testsuite/data/: DTM_10m.tif
src/raster/r.timeseries.locations/: Makefile  r.timeseries.locations.html  r.timeseries.locations.py
src/raster/r.timeseries.locations/testsuite/: test_r_timeseries_locations.py
src/temporal/t.avalanche.stats/: Makefile  t.avalanche.stats.html  t.avalanche.stats.py
src/temporal/t.import.hrsi/: Makefile  t.import.hrsi.html  t.import.hrsi.py
src/temporal/t.import.hrsi/testsuite/: test_t_import_hrsi_ice.py  test_t_import_hrsi_snow.py
src/temporal/t.import.hrsi/testsuite/data/: aoi.geojson
src/temporal/t.pytorch.predict/: Makefile  t.pytorch.predict.html  t.pytorch.predict.py
src/temporal/t.rast.aggregate.condition/: Makefile  t.rast.aggregate.condition.html  t.rast.aggregate.condition.py
src/temporal/t.rast.aggregate.patch/: Makefile  t.rast.aggregate.patch.html  t.rast.aggregate.patch.py
src/temporal/t.rast.copytree/: Makefile  t.rast.copytree.html  t.rast.copytree.py
src/temporal/t.rast.copytree/testsuite/: test_t_rast_copytree.py
src/temporal/t.rast.exporttree/: Makefile  t.rast.exporttree.html  t.rast.exporttree.py
src/temporal/t.rast.exporttree/testsuite/: test_t_rast_exporttree.py
src/temporal/t.rast.import.gdalvrt/: Makefile  t.rast.import.gdalvrt.py
src/temporal/t.rast.patch.group/: Makefile  t.rast.patch.group.html  t.rast.patch.group.py
src/temporal/t.rast.patch.group/testsuite/: test_t_rast_stats.py
src/temporal/t.rast.reclass/: Makefile  t.rast.reclass.html  t.rast.reclass.py
src/temporal/t.rast.reclass/testsuite/: test_t_rast_reclass.py
src/temporal/t.rast.stats/: Makefile  t.rast.stats.html  t.rast.stats.py
src/temporal/t.rast.stats/testsuite/: test_t_rast_stats.py
src/temporal/t.register.local/: Makefile  t.register.local.html  t.register.local.py
src/temporal/t.register.local/testsuite/: test_t_register_local.py
src/temporal/t.sentinel3.import/: Makefile  t.sentinel3.import.html  t.sentinel3.import.py
